Fixes font issue

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
             <div class="block">
                 <div class="left">
                     <p class="header">
-                        An inspiring design delivered to your inbox every morning
+                        <b>
+                        An inspiring design delivered to your
+                        <br>
+                         inbox every morning
+                        </b>
                     </p>
                     <p class="about">
                         Our team scouts the internet for the best designs, illustrations and art and delivers a truly inspiring one
